# ChangeLog for dev-libs/cloog-ppl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/cloog-ppl/ChangeLog,v 1.45 2012/02/20 06:55:18 dirtyepic Exp $

  20 Feb 2012; Ryan Hill <dirtyepic@gentoo.org> -cloog-ppl-0.15.8.ebuild,
  -cloog-ppl-0.15.9.ebuild:
  Remove old.

  07 Jan 2012; Mike Frysinger <vapier@gentoo.org> cloog-ppl-0.15.10.ebuild:
  Drop autotools-utils to avoid broken reconfigure logic #398039 by Nikoli.

  20 Aug 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  cloog-ppl-0.15.10.ebuild:
  keyword ~sparc-solaris

  25 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> cloog-ppl-0.15.10.ebuild:
  ppc/ppc64 stable wrt #373877

  24 Jul 2011; Raúl Porcel <armin76@gentoo.org> cloog-ppl-0.15.10.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #373877

  22 Jul 2011; Jeroen Roovers <jer@gentoo.org> cloog-ppl-0.15.10.ebuild:
  Stable for HPPA (bug #373877).

  17 Jul 2011; Markus Meier <maekke@gentoo.org> cloog-ppl-0.15.10.ebuild:
  x86 stable, bug #373877

  12 Jul 2011; Markus Meier <maekke@gentoo.org> cloog-ppl-0.15.10.ebuild:
  arm stable, bug #373877

  06 Jul 2011; Markos Chandras <hwoarang@gentoo.org> cloog-ppl-0.15.10.ebuild:
  Stable on amd64 wrt bug #373877

  27 Mar 2011; Brent Baude <ranger@gentoo.org> cloog-ppl-0.15.9.ebuild:
  stable ppc, bug 347239

  09 Jan 2011; Fabian Groffen <grobian@gentoo.org> cloog-ppl-0.15.10.ebuild:
  Fix for Prefix, marked ~amd64-linux

*cloog-ppl-0.15.10 (06 Jan 2011)

  06 Jan 2011; Ryan Hill <dirtyepic@gentoo.org> +cloog-ppl-0.15.10.ebuild:
  Version bump allowing use of PPL 0.11. No other code changes. Ported to
  EAPI 3 and autotools-utils eclass. Changed include path and etc. to avoid
  collisions with upstream CLooG.

  06 Jan 2011; Raúl Porcel <armin76@gentoo.org> cloog-ppl-0.15.9.ebuild:
  ia64/s390/sh/sparc stable wrt #347239

  02 Jan 2011; Tobias Klausmann <klausman@gentoo.org> cloog-ppl-0.15.9.ebuild:
  Stable on alpha, bug #347239
