@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/cloog-ppl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/cloog-ppl/ChangeLog,v 1.45 2012/02/20 06:55:18 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/cloog-ppl/ChangeLog,v 1.46 2012/04/26 19:00:33 aballier Exp $
+
+  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> cloog-ppl-0.15.10.ebuild:
+  keyword ~amd64-fbsd
 
   20 Feb 2012; Ryan Hill <dirtyepic@gentoo.org> -cloog-ppl-0.15.8.ebuild,
   -cloog-ppl-0.15.9.ebuild:
